# emacs-libvterm

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  arena.c  arena.h  conpty.c  conpty.h  elisp.c  elisp.h  vterm-module.c  vterm-module.h  vterm.el
.github/prompts/: ARCHITECTURE.md  ARENA_ALLOCATOR_INTEGRATION.md  BUFFER_SIZE_ANALYSIS.md  BUILD.md  CONPTY_PERFORMANCE_IMPROVEMENTS.md  CONPTY_PIPE_FIX.md  CONPTY_STDOUT_BLOCKING_ISSUE.md  EMACS_HANG_FIX_SUMMARY.md  HIGH_VOLUME_IO_OPTIMIZATIONS.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  REMOVE_BLOCKING_ACCEPT_PROCESS_OUTPUT.md  RESIZE_HANG_FIX.md  RESIZE_HANG_ROOT_CAUSE.md  STDIN_PIPE_FIX.md  WHY_ASYNC_STDOUT_FAILED.md
.github/workflows/: build_module.yml
benchmark/: README.md  bench-memory.el  bench-throughput.sh  benchmark.el  compare-versions.ps1  quick-test.el  run-auto-benchmark.ps1  run-benchmark.ps1  run-manual-test.bat  simple-test.el  test-render-text.el  vterm-perf-test.el
conpty-proxy/: .clang-format  CMakeLists.txt  README.md  arena.c  conpty_proxy.c
conpty-proxy/.github/workflows/: build.yml
docs/optimization/: CHANGELOG.md  COMPREHENSIVE_PROFILING.md  NEXT_STEPS.md  PHASE2_ANALYSIS.md  PHASE2_READY.md  PHASE2_RETEST_ANALYSIS.md  PHASE2_TEST.md  PHASE3A_IMPLEMENTATION.md  PHASE3A_RESULTS.md  PHASE3B_IMPLEMENTATION.md  PHASE3B_RESULTS.md  PHASE3_EXTENDED_PROFILING.md  PHASE3_RESULTS.md  PROFILING_ANALYSIS.md  README.md  SUMMARY.md  TERM_REDRAW_ANALYSIS.md
tests/: README.md  test-conpty-pipe.c  test-integration.ps1
